# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240505062128_create_subscription_tokens_table.sql  20240519065240_seed_user.sql  20240528030144_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_db_local.sh  init_redis.sh  init_redis_local.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
